--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ background-color: #EAF6F6;
 
     <h2>i have played minecraft,roblox and brawl stars and some .io games like <strong> diep.io fly or die.io and dig dig.io</strong></h2>
     <h3>my hobies</h3>
-    <a href="file:///C:/Users/Kalin/Desktop/Vezbi%20HTML/games.html">my games</a>
+    <a href="games.html">my games</a>
     <hr size=3 noshade>
     <h3>programing</h3>
     <h3>I work with HTML CSS and JAVASCRIPT</h3>
