--- a/games.html
+++ b/games.html
@@ -10,7 +10,7 @@
 body {
 background-color: #EAF6F6;
 }
-<hr> {
+hr {
   background-color: #EAF6F6;
   border-style dotted;
   height: 0px
@@ -25,7 +25,7 @@ background-color: #EAF6F6;
     <a href="https://evoworld.io/">flyordie<br><strong></a>
   </ol>
   <hr size=3>
-  <form class="" action="mailto:gmail.com" method="post">
+  <form class="" action="mailto:kalinkochev@gmail.c.com" method="post">
 
   </form>
   <label>what is your favorite game</label>.
@@ -33,7 +33,7 @@ background-color: #EAF6F6;
   <label>your email</label>
   <input type="email" name="yourEmail" value=""><br>
   <label>youur mesege</label><br>
-  <textarea name="yourMesege" rows="10" cols="30"></textarea><br>
+  <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
   <input type="submit" name="">
 
 
