--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Kalin's personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <style>
 body {
 background-color: #EAF6F6;
 }
-<hr> {
-  background-color: #EAF6F6;
-  border-style none;
-  height: 2px
-  width: 20px
-}
-
 </style>
-
-<body style="background-color:#gray;">
+<body>
   <table>
     <tr>
       <td>
