--- a/games.html
+++ b/games.html
@@ -33,7 +33,7 @@ hr {
   <label>your email</label>
   <input type="email" name="yourEmail" value=""><br>
   <label>youur mesege</label><br>
-  <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+  <textarea name="yourmessage" rows="10" cols="30"></textarea><br>
   <input type="submit" name="">
 
 
