--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <style>
-body {
-background-color: #EAF6F6;
-}
+  body{
+
+    background-color:#EAF6F6
+  }
 </style>
+
 <body>
   <table>
     <tr>
@@ -18,7 +20,7 @@ background-color: #EAF6F6;
       <td></td>
     </tr>
   </table>
-  <hr size=3 noshade>
+  <hr size=10 noshade>
   <h1>Kalin</h1>
   <strong><em>
       <p>i'm a beginer at programing</p></strong>
@@ -29,7 +31,7 @@ background-color: #EAF6F6;
     <h2>i have played minecraft,roblox and brawl stars and some .io games like <strong> diep.io fly or die.io and dig dig.io</strong></h2>
     <h3>my hobies</h3>
     <a href="games.html">my games</a>
-    <hr size=3 noshade>
+    <hr size=10 noshade>
     <h3>programing</h3>
     <h3>I work with HTML CSS and JAVASCRIPT</h3>
     <table border="1">
